--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "bulma": "^0.5.1",
     "vue": "^2.4.2",
+    "vue-gh-pages": "^1.5.0",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
