--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "bulma": "^0.5.1",
+    "font-awesome": "^4.7.0",
+    "prerender-spa-plugin": "^2.1.0",
     "vue": "^2.4.2",
     "vue-gh-pages": "^1.5.0",
-    "vue-router": "^2.7.0"
+    "vue-head": "^2.0.11",
+    "vue-router": "^2.7.0",
+    "vue-scrollto": "^2.7.7",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
