--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "prerender-spa-plugin": "^2.1.0",
     "vue": "^2.4.2",
+    "vue-awesome": "^2.3.3",
     "vue-gh-pages": "^1.5.0",
     "vue-head": "^2.0.11",
     "vue-router": "^2.7.0",
