--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-runtime": "^6.26.0",
     "bulma": "^0.5.1",
     "font-awesome": "^4.7.0",
+    "font-awesome-sass-loader": "^2.0.1",
+    "font-awesome-webpack": "0.0.5-beta.2",
     "prerender-spa-plugin": "^2.1.0",
     "vue": "^2.4.2",
     "vue-awesome": "^2.3.3",
