--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "font-awesome-sass-loader": "^2.0.1",
     "font-awesome-webpack": "0.0.5-beta.2",
     "prerender-spa-plugin": "^2.1.0",
+    "vee-validate": "^2.0.0-rc.15",
     "vue": "^2.4.2",
     "vue-awesome": "^2.3.3",
     "vue-gh-pages": "^1.5.0",
     "vue-head": "^2.0.11",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
     "vue-scrollto": "^2.7.7",
     "vuex": "^2.4.0"
